--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,11 @@
 h1 {
   text-align: center;
 }
+body {
+  text-align: center;
+  margin: auto;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
