--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,3 +9,8 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
 }
+div {
+  height: 200px;
+  width: 100%;
+  background-color: yellow;
+}
