--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ div:nth-child(3) {
    color: #999999;
    text-align: left;
 }
-div:nth-child(4) {
+#chimbica {
   height: 200px;
   width: 100%;
   background-color: yellow;
