--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,3 +15,12 @@ body {
   background-color: yellow;
   position: absolute;
 }
+div:first-child {
+  height: 30px;
+	width: 190px;
+  background-color: white;
+  margin-top: 10px;
+   margin: auto;
+   color: #999999;
+   text-align: left;
+}
