--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,3 +24,12 @@ div:first-child {
    color: #999999;
    text-align: left;
 }
+div:nth-child(2) {
+  height: 30px;
+	width: 190px;
+  background-color: white;
+  margin-top: 10px;
+   margin: auto;
+   color: #999999;
+   text-align: left;
+}
