--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,9 @@ body {
   position: absolute;
 }
 div:first-child {
+  color: white;
+}
+div:nth-child(2) {
   height: 30px;
 	width: 190px;
   background-color: white;
@@ -24,7 +27,7 @@ div:first-child {
    color: #999999;
    text-align: left;
 }
-div:nth-child(2) {
+div:nth-child(3) {
   height: 30px;
 	width: 190px;
   background-color: white;
