--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ body {
 ul{
 	list-style-type: none;
 	position: fixed;
-	margin: -10px;
+	margin-top: 165px;
 }
 li {
 	display: inline;
@@ -26,5 +26,5 @@ li {
 	color: #ffffff;
 	padding: 5px;
 	border-radius: 5px 5px;
-	background-color: #cc0323
+	background-color: #cc0323;
 }
