--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,9 @@ h1 {
   text-align: center;
 }
 body {
+  text-align: right;
+  margin-right: 20px;
+  margin-top: 160px;
   margin: auto;
   width: 100%;
   background-repeat: no-repeat;
