--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,6 +47,8 @@ a {
   position: relative;
 }
 img {
-  margin-top: 180px;
+  margin-top: 200px;
   margin-left: 20px;
+  height: 300px;
+  width: 300px;
 }
