--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,8 @@ body {
 ul{
 	list-style-type: none;
 	margin-top: 135px;
-	margin-left: 200px;
+	margin-left: 400px;
+	position: fixed;
 }
 li {
 	display: inline;
