--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ body {
   height: 170px;
   width: 100%;
   background-color: yellow;
-  position: absolute;
+  position: fixed;
 }
 ul{
 	list-style-type: none;
