--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,10 +46,9 @@ a {
 }
 img {
   margin-top: 40px;
-  margin-right: 520px;
+  margin-left: 40px;
   height: 600px;
   width: 700px;
-  display: inline;
 }
 #pipa {
   height: 60px;
@@ -57,7 +56,7 @@ img {
   background-color: yellow;
 }
 #texto {
-  display: inline;
+  margin-top: 40px;
   text-align: center;
   margin-right: 50px;
 }
