--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,13 @@ img {
   background-color: yellow;
 }
 #texto {
+  position: relative;
   margin-top: 40px;
   text-align: center;
   margin-right: 50px;
+  float: left;
+}
+#imagem {
+  position: relative;
+  float: left;
 }
